--- a/laxyam/padyam/vIra-kathAH/madhurA-vijayam/raw/canto_1.xhtml
+++ b/laxyam/padyam/vIra-kathAH/madhurA-vijayam/raw/canto_1.xhtml
@@ -12,7 +12,7 @@ xmlns:epub="http://www.idpf.org/2007/ops">
 <details><summary>मूलम्</summary>
 
 महाकविमुखाम्भोजमणिपञ्जरशारिकाम् ।  
-चैतन्यजलधिज्योत्स्नां देवीं वन्दे सरस्वतीम् ॥ १ ॥ अनुष्टुभ्
+चैतन्यजलधिज्योत्स्नां देवीं वन्दे सरस्वतीम् ॥ 
 </details>
 
 
@@ -33,7 +33,7 @@ rousing the ocean of human consciousness.
 <details><summary>मूलम्</summary>
 
 निर्दोषाप्यगुणा वाणी न विद्वज्जनरञ्जिनी ।  
-पतिव्रताप्यरूपा स्त्री परिणेत्रे न रोचते ॥ २ ॥
+पतिव्रताप्यरूपा स्त्री परिणेत्रे न रोचते ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -52,7 +52,7 @@ she will not please her spouse.
 <details><summary>मूलम्</summary>
 
 न प्रार्थनीयः सत्काव्यश्रुत्यै सहृदयो जनः ।  
-स्वादुपुष्परसास्वादे कः प्रेरयति षट्पदम् ॥ ३ ॥
+स्वादुपुष्परसास्वादे कः प्रेरयति षट्पदम् ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -69,7 +69,7 @@ to sip the sweet nectar seeping from blown buds?
 <details><summary>मूलम्</summary>
 
 तन्मदीयमिदं काव्यं विबुधाः श्रोतुमर्हथ ।  
-मधुराविजयं नाम चरितं कम्पभूपतेः ॥ ४ ॥
+मधुराविजयं नाम चरितं कम्पभूपतेः ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -87,7 +87,7 @@ the story of King Kampa.
 <details><summary>मूलम्</summary>
 
 आसीत् समस्तसामन्तमस्तकन्यस्तशासनः ।  
-बुक्कराज इति ख्यातो राजा हरिहरानुजः ॥ ५ ॥
+बुक्कराज इति ख्यातो राजा हरिहरानुजः ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -105,7 +105,7 @@ with heads bent consented to his every order.
 <details><summary>मूलम्</summary>
 
 विवेकमेव सचिवं धनुरेव वरूथिनीम् ।  
-बाहुमेव रणोत्साहे यः सहायममन्यत ॥ ६ ॥
+बाहुमेव रणोत्साहे यः सहायममन्यत ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -122,7 +122,7 @@ no allies but his two arms.
 <details><summary>मूलम्</summary>
 
 विरोधिवाहिनीनाथविक्षोभणपटीयसा ।  
-भुजेन भूभृता यस्य प्राप्ता कीर्तिमयी सुधा ॥ ७ ॥
+भुजेन भूभृता यस्य प्राप्ता कीर्तिमयी सुधा ॥ 
 </details>
 
 
@@ -141,7 +141,7 @@ he produced his own *amṛta*, fame.[^1]
 <details><summary>मूलम्</summary>
 
 परिपन्थिनृपप्राणपवनाहारदारुणः ।  
-असृजद्भुजगो यस्य कृपाणः कीर्तिकञ्चुकम् ॥ ८ ॥
+असृजद्भुजगो यस्य कृपाणः कीर्तिकञ्चुकम् ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -158,7 +158,7 @@ as its now whitened skin.
 <details><summary>मूलम्</summary>
 
 कलिकालमहाघर्मप्लुष्टो धर्ममहीरुहः ।  
-यस्य दानाम्बुसेकेन पुनरङ्कुरितोऽभवत् ॥ ९ ॥
+यस्य दानाम्बुसेकेन पुनरङ्कुरितोऽभवत् ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -176,7 +176,7 @@ while handing out gifts[^2].
 <details><summary>मूलम्</summary>
 
 यस्याङ्घ्रिपीठसङ्घर्षरेखालाञ्छितमौलयः ।  
-आशास्वरिनृपा एव जयस्तम्भतया स्थिताः ॥ १० ॥
+आशास्वरिनृपा एव जयस्तम्भतया स्थिताः ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -194,7 +194,7 @@ scored from prostrating at his footstool.[^3]
 <details><summary>मूलम्</summary>
 
 बद्धाः सभाङ्गणे यस्य भान्ति स्म जयसिन्धुराः ।  
-बन्दीकृता इवाम्भोदा जैत्रयात्रानिरोधिनः ॥ ११ ॥
+बन्दीकृता इवाम्भोदा जैत्रयात्रानिरोधिनः ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -213,7 +213,7 @@ for daring to halt his military assaults.
 <details><summary>मूलम्</summary>
 
 तस्यासीद्विजया नाम विजयार्जितसम्पदः ।  
-राजधानी बुधैः श्लाघ्या शक्रस्येवामरावती ॥ १२ ॥
+राजधानी बुधैः श्लाघ्या शक्रस्येवामरावती ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -232,7 +232,7 @@ known to all as Vijayā
 <details><summary>मूलम्</summary>
 
 सुरलोकान्तसंक्रान्तस्वर्णदीमत्सरादिव ।  
-परिखाकारतां यान्त्या परीता तुङ्गभद्र‌‍या ॥ १३ ॥
+परिखाकारतां यान्त्या परीता तुङ्गभद्र‌‍या ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -249,7 +249,7 @@ who gushes around the bounds of the gods’ domain.
 <details><summary>मूलम्</summary>
 
 लक्ष्मीलतालवालेन क्ष्मावधूनाभिशोभिना ।  
-चक्राचलप्रकारेण प्राकारेण परिष्कृता ॥ १४ ॥
+चक्राचलप्रकारेण प्राकारेण परिष्कृता ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -267,7 +267,7 @@ or a circle of soaring mountains.
 <details><summary>मूलम्</summary>
 
 यशःस्तोमैरिवाशेषनगरीविजयार्जितैः ।  
-सौधैः प्रकाशितोत्सेधा शरदम्भोदपाण्डरैः ॥ १५ ॥
+सौधैः प्रकाशितोत्सेधा शरदम्भोदपाण्डरैः ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -284,7 +284,7 @@ spoke of her stature.
 <details><summary>मूलम्</summary>
 
 यत्सौधचन्द्रशालासु विहरन्त्यो मृगेक्षणाः ।  
-शशाङ्कमवलम्बन्ते मुक्ताकन्दुकशङ्क‍या ॥ १६ ॥
+शशाङ्कमवलम्बन्ते मुक्ताकन्दुकशङ्क‍या ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -302,7 +302,7 @@ foolishly mistaking it for their pearl-embroidered ball.
 <details><summary>मूलम्</summary>
 
 पद्मरागोपलोत्कीर्णप्रासादप्रान्तवर्तिनः ।  
-सन्ततं यत्र दृश्यन्ते सान्ध्या इव बलाहकाः ॥ १७ ॥
+सन्ततं यत्र दृश्यन्ते सान्ध्या इव बलाहकाः ॥ 
 </details>
 
 
@@ -321,7 +321,7 @@ by the setting sun.
 <details><summary>मूलम्</summary>
 
 सन्ध्यासु यत्र निर्यान्ति जालेभ्यो धूपराजयः ।  
-अन्तःप्रदीपिकालोकचकितध्वान्तसन्निभाः ॥ १८ ॥
+अन्तःप्रदीपिकालोकचकितध्वान्तसन्निभाः ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -340,7 +340,7 @@ of the oil lamps standing guard within.
 <details><summary>मूलम्</summary>
 
 देवायी नाम तस्यासीद्देवी वसुमतीपतेः ।  
-पद्मा पद्मेक्षणस्येव शङ्करस्येव पार्वती ॥ १९ ॥
+पद्मा पद्मेक्षणस्येव शङ्करस्येव पार्वती ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -360,7 +360,7 @@ as to Śiva Pārvatī.
 कर्णाटलोकनयनोत्सवपूर्णचन्द्रः  
 साकं तया हृदयसम्मतया नरेन्द्रः ।  
 कालोचितान्यनुभवन् क्रमशः सुखानि   
-वीरश्चिराय विजयापुरमध्यवात्सीत् ॥ २० ॥ वसन्ततिलका
+वीरश्चिराय विजयापुरमध्यवात्सीत् ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
