--- a/laxyam/padyam/vIra-kathAH/madhurA-vijayam/raw/canto_3.xhtml
+++ b/laxyam/padyam/vIra-kathAH/madhurA-vijayam/raw/canto_3.xhtml
@@ -14,7 +14,7 @@ xmlns:epub="http://www.idpf.org/2007/ops">
 ततो यथावत्कृतचौलसंस्क्रियो  
 नरेन्द्रसूनुः स्वत एव लब्धवान् ।  
 कलासु शश्वत् सकलासु कौशलं  
-गुरूपदेशस्त्वपदेशतामगात् ॥ १ ॥ वंशस्थम्
+गुरूपदेशस्त्वपदेशतामगात् ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -36,7 +36,7 @@ though he had no need for schooling.
 स पञ्चबाणद्विपकेलिदीर्घिकां  
 धरानुरागद्रुमपुष्पमञ्जरीम् ।  
 नितम्बिनीनेत्रचकोरचन्द्रिका-  
-मवापदास्कन्दितशैशवां दशाम् ॥ २ ॥
+मवापदास्कन्दितशैशवां दशाम् ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -58,7 +58,7 @@ of heavy-hipped ladies.
 स रूपगर्वेण निरास्थदङ्घ्रिणा  
 स्मरस्य नूनं जयवैजयन्तिकाम् ।  
 न चेत् कथं तस्य तलेऽतिकोमले  
-सुलेखमालक्ष्यत मीनलाञ्छनम् ॥ ३ ॥
+सुलेखमालक्ष्यत मीनलाञ्छनम् ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -79,7 +79,7 @@ assume the shape of a fish?[^1]
 अधारयद्दर्शितदेहसौष्ठवां  
 स राजसूनुस्तनुवृत्तमध्यताम् ।  
 पराक्रमत्रासितचित्तवृत्तिभि-  
-र्मृगाधिराजैरुपदीकृतामिव ॥ ४ ॥
+र्मृगाधिराजैरुपदीकृतामिव ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -100,7 +100,7 @@ their hearts trembling at the thought of his might.
 विहाय मध्यं यदि लक्ष्मरेखया  
 बहिः प्रसार्येत सुधांशुमण्डलम् ।  
 दरोदितश्मश्रुकृतश्रियस्तदा  
-तदाननेन्दोरुपमानतां व्रजेत् ॥ ५ ॥
+तदाननेन्दोरुपमानतां व्रजेत् ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -121,7 +121,7 @@ by the beard just appearing.
 अधारयद्गर्भितरक्तसन्ध्यकं  
 नृपात्मजः केशकलापमायतम् ।  
 दृढानुरागच्छुरितैर्मृगीदृशा-  
-मनुप्रविष्टं हृदयैरिवान्तरा ॥ ६ ॥
+मनुप्रविष्टं हृदयैरिवान्तरा ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -141,7 +141,7 @@ daubed with the passion he aroused.
 अथैनमासादितयौवनोदयं  
 नरेन्द्रकन्याभिरयोजयन्नृपः ।  
 घनागमः सम्भृतरत्नसम्पदं  
-वरापगाभिर्निधिमम्भसामिव ॥ ७ ॥
+वरापगाभिर्निधिमम्भसामिव ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -163,7 +163,7 @@ to great rivers.
 अरातिवर्गोन्मथनेन विश्रुतं  
 विधातुमत्यन्तविनीतमप्यमुम् ।  
 कदाचिदर्थोल्लसितेन भूपतिः  
-स वाङ्मयेनैवमुपादिशत् सुतम् ॥ ८ ॥
+स वाङ्मयेनैवमुपादिशत् सुतम् ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -183,7 +183,7 @@ with words rich in wisdom.
 धियः प्रकाशादुपदेशसम्भृतात्  
 तमो हि तारुण्यविजृम्भितं जनाः ।  
 समुज्झितुं तात भवन्ति पारिता-  
-स्तदेतदाकर्णयितुं त्वमर्हसि ॥ ९ ॥
+स्तदेतदाकर्णयितुं त्वमर्हसि ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -205,7 +205,7 @@ these words of mine.
 मुहुःप्रसर्पन्मदमीलितेक्षणाः  
 क्षणाधिरोहद्रजसो मलीमसाः ।  
 गजा इव स्तम्भनिरुद्धचेतसः  
-खला न गृह्णन्ति नियन्तृचोदितम् ॥ १० ॥
+खला न गृह्णन्ति नियन्तृचोदितम् ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -231,7 +231,7 @@ Neither gives ear to their master.
 सहस्रशस्तुङ्गतुरङ्गवीचयो  
 मदद्विपद्वीपविशेषितान्तराः ।  
 भवन्तमुग्रायुधनक्रराजयो  
-भजन्ति नित्यं बहला बलाब्धयः ॥ ११ ॥
+भजन्ति नित्यं बहला बलाब्धयः ॥ 
 </details>
 
 
@@ -253,7 +253,7 @@ ever at the ready for you.
 उपेत्य तुण्डीरमखण्डितोद्यमः  
 प्रमथ्य चम्पप्रमुखान् रणोन्मुखान् ।  
 प्रशाधि काञ्चीमनुवर्तितप्रजः  
-पतिर्निधीनामलकापुरीमिव ॥ १२ ॥
+पतिर्निधीनामलकापुरीमिव ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -273,7 +273,7 @@ just as Kubera, lord of wealth, rules Alakā.
 अथाभिभूताखिलवन्यभूभृत-  
 स्तुरुष्कभङ्गस्तव नैव दुष्करः ।  
 निगीर्णशाखाशतसंवृतिः कथं  
-तरुप्रकाण्डं न दहेद्दवानलः ॥ १३ ॥
+तरुप्रकाण्डं न दहेद्दवानलः ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -293,7 +293,7 @@ how can it fail to burn down the tree itself?’
 इतीरयित्वा विरते नरेश्वरे  
 प्रवृष्टपाथोधरसाम्यधारिणि ।  
 कृतप्रणामः शिरसा प्रतीष्टवान्  
-गुरूपदेशं गुणिनां पुरःसरः ॥ १४ ॥
+गुरूपदेशं गुणिनां पुरःसरः ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -314,7 +314,7 @@ taking to heart his hallowed words.
 अथोरगाणामधिपस्य भाविनं  
 भुवो भरस्यापगमं दिनेश्वरः ।  
 निवेदयिष्यन्निव गाढरंहसा  
-रथेन पातालगुहामगाहत ॥ १५ ॥
+रथेन पातालगुहामगाहत ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -335,7 +335,7 @@ into the cavern of Pātāla.
 अथ नृपसुतः सान्ध्यं निर्माय कर्म सभां गतः  
 क्षणमिव गुरोराज्ञां राज्ञां गणाय निवेद्य सः ।  
 विमतविजयव्यग्रोत्साहान् विहाय गृहाय ता-  
-नरमत सुखी शय्यागेहे सरोजमुखीसखः ॥ १६ ॥ हरिणी
+नरमत सुखी शय्यागेहे सरोजमुखीसखः ॥ 
 </details>
 
 
