--- a/laxyam/padyam/vIra-kathAH/madhurA-vijayam/raw/canto_5.xhtml
+++ b/laxyam/padyam/vIra-kathAH/madhurA-vijayam/raw/canto_5.xhtml
@@ -14,7 +14,7 @@ xmlns:epub="http://www.idpf.org/2007/ops">
 अथ स तत्र महीतलमण्डने  
 मरकताह्वयभाजि महापुरे ।  
 विरचितस्थितिरप्रतिशासनं  
-जगदशेषमरक्षदनाकुलम् ॥ १ ॥ द्रुतविलम्बितम्
+जगदशेषमरक्षदनाकुलम् ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -34,7 +34,7 @@ bringing peace to his subjects.
 नरपतेः प्रतिहारमहीं मुहु-  
 र्विजयदन्तिमदोदकपङ्किलाम् ।  
 क्षितिभुजां भुजभूषणघट्टन-  
-प्रसृमरो मणिरेणुरशोषयत् ॥ २ ॥
+प्रसृमरो मणिरेणुरशोषयत् ॥ 
 </details>
 
 
@@ -57,7 +57,7 @@ streaming from war elephants.
 अथ सुगन्धिहिमान् व्यजनानिलान्  
 मृगदृशः कृतचन्दनचर्चिकाः ।  
 शशिमतीश्च निशाः प्रियतां नय-  
-न्नरपतेरुदभूदृतुरूष्मलः ॥ ३ ॥
+न्नरपतेरुदभूदृतुरूष्मलः ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -77,7 +77,7 @@ nights aglint with the moon.
 नियतिनिर्मितदक्षिणदिग्वधू-  
 विरहतापनिवारणवाञ्छ‍या ।  
 अहिमभानुरहन्यहनि ध्रुवं  
-हरितमाप हिमाचलशीतलाम् ॥ ४ ॥
+हरितमाप हिमाचलशीतलाम् ॥ 
 </details>
 
 
@@ -101,7 +101,7 @@ for the Himālaya-cooled North.[^1]
 सरसचन्दनधारिषु मौक्तिक-  
 त्रिसरनिर्झरहारिषु सुभ्रुवाम् ।  
 कुचतटेषु निदाघनिपीडितो  
-धृतिमगात् कुसुमायुधकुञ्जरः ।। ५ ॥
+धृतिमगात् कुसुमायुधकुञ्जरः ।। 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -122,7 +122,7 @@ trickling down in pearl-string triplets.
 सलिलकेलिकुतूहलकुन्तली-  
 कुचतटाहतिजातभयैरिव ।  
 अपसृतैरजनि प्रतिवासरं  
-नृपतिगेहविहारसरोजलैः ॥ ६ ॥
+नृपतिगेहविहारसरोजलैः ॥ 
 </details>
 
 
@@ -144,7 +144,7 @@ larking about lithely as they bathed.
 अथ दलन्निचुलद्रुममञ्जरी-  
 निचयदर्शितचामरविभ्रमः ।  
 कृतनुतिः किल चातकयाचकै-  
-र्नृपतिमन्वगमज्जलदागमः ॥ ७ ॥
+र्नृपतिमन्वगमज्जलदागमः ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -166,7 +166,7 @@ words of praise ever singing.[^2]
 स्फुटतटित्तपनीयगुणोज्ज्वलैः  
 पृथुपयःकणमौक्तिकसङ्गिभिः ।  
 अलिकदम्बकसच्छविभिर्दिशा-  
-मसितकञ्चुलिकायितमम्बुदैः ॥ ८ ॥
+मसितकञ्चुलिकायितमम्बुदैः ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -185,7 +185,7 @@ and studded with pearls formed of rounded rain drops.
 हरितलोहितपाण्डुरराजत  
 त्रिदशराजशरासनलेखिका ।  
 मरकतोपलविद्रुममौक्तिकै-  
-र्विरचिता रशनेव नभःश्रियः ॥ ९ ॥
+र्विरचिता रशनेव नभःश्रियः ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -204,7 +204,7 @@ embroidered with emerald, coral and pearl.
 रुधिरबिन्दुनिभच्छविरन्वगात्  
 क्षितितले हरिगोपपरम्परा ।  
 घनघरट्टपरस्परघट्टन-  
-क्षरदिरम्मदवह्निकणावलिम् ॥ १० ॥
+क्षरदिरम्मदवह्निकणावलिम् ॥ 
 </details>
 
 
@@ -225,7 +225,7 @@ as cloud ground against stone cloud.
 पटुपुरःपवनाधिगतभ्रमा  
 जलमुचः करकोपलकैतवात् ।  
 सलिलराशिपयःसहचूषिता-  
-मुदवमन्निव मौक्तिकसंहतिम् ॥ ११ ॥
+मुदवमन्निव मौक्तिकसंहतिम् ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -245,7 +245,7 @@ sucked up when they swallowed the sea’s salt water.
 करतलैरिव गन्धवहैर्घनाः  
 प्रहितकैतकपांसुविभूतयः ।  
 स्तनितहुङ्कृतिभिर्निरकासय-  
-न्नृपतियौवतमानमहाग्रहम् ॥ १२ ॥
+न्नृपतियौवतमानमहाग्रहम् ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -265,7 +265,7 @@ possessing the King’s young wives.
 तदनु पद्मवनीपरिहासक-  
 स्त्रिदशनाथशरासनतस्करः ।  
 भुजगभुङ्मुखमुद्रणभौरिकः  
-समुदभूत् समयो जलदात्ययः ॥ १३ ॥
+समुदभूत् समयो जलदात्ययः ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -284,7 +284,7 @@ treasurer sealing tight the talkative tongues of peacocks[^4].
 विधुतकाशसटाभरभासुरः  
 प्रकटितोरुजपारुणलोचनः ।  
 व्यघटयद् घनदन्तिघटाः स्फुर-  
-द्रविमुखः शरदागमकेसरी ॥ १४ ॥
+द्रविमुखः शरदागमकेसरी ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -304,7 +304,7 @@ his face the effulgent sun –
 जलदकालकलिस्फुरितां शनैः  
 कलुषतां प्रशमय्य कृशाः पुनः ।  
 घटयति स्म शरत् तटिनीसखी-  
-रुपनतैः कलहंसविलासिभिः ॥ १५ ॥
+रुपनतैः कलहंसविलासिभिः ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -325,7 +325,7 @@ newly returned.
 विकचपद्मविलोचनमात्मनो  
 मुखमवेक्षितुमात्तकुतूहला ।  
 नियतमभ्रनिचोलकगर्भतः  
-शरदकर्षदहर्पतिदर्पणम् ॥ १६ ॥
+शरदकर्षदहर्पतिदर्पणम् ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -345,7 +345,7 @@ as the lotuses of her eyes burst into bloom.
 वनभुवः परितः पवनेरितै-  
 र्नवजपाकुसुमैः कृतदीपिकाः ।  
 प्रथममेव नृपस्य निदेशतो  
-विजयिनस्तुरगान् निरराजयन् ॥ १७ ॥
+विजयिनस्तुरगान् निरराजयन् ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -366,7 +366,7 @@ for his ever-victorious horses.
 अथ नृपस्य समुत्सुकचेतसो  
 मदनकेलिकलासु विलासिनः ।  
 प्रियमिवाचरितुं समुपागमत्  
-प्रगुणयन् क्षणदास्तुहिनागमः ॥ १८ ॥
+प्रगुणयन् क्षणदास्तुहिनागमः ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -385,7 +385,7 @@ who longed for lovemaking.
 हिमभरैर्विहतः कमलाकरो  
 मृदितकान्तिरभून्मृगलाञ्छनः ।  
 वदनमेव नरेन्द्रनतभ्रुवा-  
-मभजत श्रियमप्रतिशासनाम् ॥ १९ ॥
+मभजत श्रियमप्रतिशासनाम् ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -405,7 +405,7 @@ alone suffered no threat to their beauty.
 विकचकुन्दकलापपरिष्क्रिया-  
 विरचितालकजालकविभ्रमम् ।  
 असमयेऽपि समौक्तिकमण्डनं  
-प्रभुरमंस्त निजं प्रमदाजनम् ॥ २० ॥
+प्रभुरमंस्त निजं प्रमदाजनम् ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -425,7 +425,7 @@ in spite of the season.
 इति सुखान्युचितानि हिमागमे  
 समनुभूय मनोभवसन्निभः ।  
 शिशिरयामवतीष्वपि रागवान्  
-रमयितुं रमणीरुदयुङ्क्त सः ॥ २१ ॥
+रमयितुं रमणीरुदयुङ्क्त सः ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -446,7 +446,7 @@ on Śiśira nights too.
 अपदिशञ्छिशिरानिलमङ्गकैः  
 पुलकितैर्नृपतेः सविधं गतः ।  
 मदनसम्भृतघर्मपयःकणै-  
-र्भृशमलज्जत मुग्धवधूजनः ॥ २२ ॥
+र्भृशमलज्जत मुग्धवधूजनः ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -466,7 +466,7 @@ when trickles of sweat revealed their arousal.
 उपहरन् कुसुमानि महीरुहां  
 किसलयैः कलिताञ्जलिबन्धनः ।  
 मधुरकोकिलकूजितभाषितो  
-मधुरथैनमुपासितुमासदत् ॥ २३ ॥
+मधुरथैनमुपासितुमासदत् ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -486,7 +486,7 @@ the honeyed season of Vasanta then waited upon the King.
 उपवनेष्वगमन्नुपमेयतां  
 स्फुटरुचो नवकिंशुककुट्मलाः ।  
 मथितपान्थमृगक्षतजारुणै-  
-र्मदनकेसरिणः कुटिलैर्नखैः ॥ २४ ॥
+र्मदनकेसरिणः कुटिलैर्नखैः ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -507,7 +507,7 @@ freshly slayed.[^6]
 चटुलषट्पदकज्जलपातिनी  
 विरुरुचे नवचम्पकमञ्जरी ।  
 प्रकटितेव हिमापगमश्रिया  
-स्मरमहोत्सवदीपपरम्परा ॥ २५ ॥
+स्मरमहोत्सवदीपपरम्परा ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -527,7 +527,7 @@ to celebrate the grand festival of Kāma.
 सुतनवः फलकेषु मधूत्सवे  
 रतिपतिं परिलेखितुमुद्यताः ।  
 हृदयगोचरतामनिशं गतं  
-हरिहरात्मजमेव[^7] समालिखन् ॥ २६ ॥
+हरिहरात्मजमेव[^7] समालिखन् ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -547,7 +547,7 @@ for it was he who dwelt eternally in their hearts.
 क्षितिपतिं किल कुङ्कुममुष्टिना  
 समभिताडयितुं धियमादधौ ।  
 सपदि घर्मपयःप्रसरेण तं  
-विगलितं न विवेद वधूजनः ॥ २७ ॥
+विगलितं न विवेद वधूजनः ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -568,7 +568,7 @@ the second it met their sweat-wetted hands.
 इति समुपचिताभिश्चातुरीभिर्विशेषा-  
 नृतुषु समुपलभ्यान्निर्विशन्निर्विशङ्कम् ।  
 सुतनुभिरवियोगोत्कण्ठिताभिस्तृतीयं  
-व्यतनुत पुरुषार्थं कम्पराजः कृतार्थम् ॥ २८ ॥ मालिनी
+व्यतनुत पुरुषार्थं कम्पराजः कृतार्थम् ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
