--- a/laxyam/padyam/vIra-kathAH/madhurA-vijayam/raw/canto_6.xhtml
+++ b/laxyam/padyam/vIra-kathAH/madhurA-vijayam/raw/canto_6.xhtml
@@ -14,7 +14,7 @@ xmlns:epub="http://www.idpf.org/2007/ops">
 अथ वरतनुभिः समं कदाचि-  
 द्विरचयितुं कुसुमापचायलीलाम् ।  
 प्रमदवनममर्त्यकामिनीभि-  
-र्हरिरिव नन्दनमासदन्नरेन्द्रः ॥ १ ॥ पुष्पिताग्रा
+र्हरिरिव नन्दनमासदन्नरेन्द्रः ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -35,7 +35,7 @@ with heaven’s beauties.
 मुखरितमणिमेखलाकलापाः  
 प्रचलितमन्वचलंस्तमायताक्ष्यः ।  
 उपवनलतिका इवोपगीत-  
-भ्रमरकुला मलयाद्रिगन्धवाहम् ॥ २ ॥
+भ्रमरकुला मलयाद्रिगन्धवाहम् ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -57,7 +57,7 @@ trail the Malaya breeze.
 अजनयदवनीश्वरस्य चेत-  
 स्यसितदृशां मणिनूपुरप्रणादः ।  
 सहपरिचलितप्रसूनकेतो-  
-रवनमदैक्षवचापघोषशङ्काम् ॥ ३ ॥
+रवनमदैक्षवचापघोषशङ्काम् ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -79,7 +79,7 @@ were readying his aim.
 अवनिपतिमनु प्रतस्थुषीणां  
 हरिणदृशामितरेतरप्रसक्ताः ।  
 मधुरसमधुरा गिरस्तदानीं  
-बहुविधभङ्गितरङ्गिता बभूवुः ॥ ४ ॥
+बहुविधभङ्गितरङ्गिता बभूवुः ॥ 
 </details>
 
 
@@ -100,7 +100,7 @@ their many-wayed words like waves.
 वरतनु परतः प्रयाहि मन्दं  
 हरिणदृशां पुरतः प्रयायिनीनाम् ।  
 पथि गतिरयशीर्णहारमुक्ता-  
-मणिगणशर्करिले पदं न कुर्याः ॥ ५ ॥
+मणिगणशर्करिले पदं न कुर्याः ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -121,7 +121,7 @@ are making a gravel of the place.’
 नलिनमुखि न बोधय प्रसुप्ता-  
 निह मणिनूपुरशिञ्जितेन हंसान् ।  
 द्रुतगमनविघातमाचरेयु-  
-र्नियतममी तव पादपद्मलग्नाः ॥ ६ ॥
+र्नियतममी तव पादपद्मलग्नाः ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -143,7 +143,7 @@ and stop you from hurrying ahead.’[^1]
 करनखरमरीचिमञ्जरीभि-  
 र्हतहृदयो जलशङ्क‍या कुरङ्गः ।  
 अनुपतति विलोकयैकवारं  
-सखि नियतं स निवर्तते विलक्षः ॥ ७ ॥
+सखि नियतं स निवर्तते विलक्षः ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -165,7 +165,7 @@ evidently embarrassed.’
 शशिमुखि शशिकान्तकुट्टिमेषु  
 स्खलनभिया न पदात् पदं प्रयासि ।  
 इयमिह वदनानुबिम्बराजि-  
-स्तव न पुनर्नवपङ्कजोपाहरः ॥ ८ ॥
+स्तव न पुनर्नवपङ्कजोपाहरः ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -193,7 +193,7 @@ Kampa playing games with his wives in a lake.
 अवनिपतिरसिक्त दीर्घिकायां  
 मुखकमलं सलिलेन साभिलाषम् ।  
 किमपि समधिकार्द्रपक्ष्मलेखं  
-वदनमभूदरुणेक्षणं परस्याः ॥ ९ ॥
+वदनमभूदरुणेक्षणं परस्याः ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -214,7 +214,7 @@ and eyes turned red.
 सलिलहतिभियापवृत्तगात्र्याः  
 प्रचलितवेण्यपराङ्गकं परस्याः ।  
 धरणिपतिरमंस्त मीनकेतोः  
-फलकमुपाहितखड्गवल्लरीकम् ॥१० ॥
+फलकमुपाहितखड्गवल्लरीकम् ॥
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -234,7 +234,7 @@ swinging across his shield.
 विशदमधरमक्ष्यनञ्जनाभं  
 विगतललाम वितन्वती ललाटम् ।  
 रतिरिव जलकेलिरङ्गनाना-  
-मवनिपतेः स्पृहणियतामयासीत् ॥ ११ ॥
+मवनिपतेः स्पृहणियतामयासीत् ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -254,7 +254,7 @@ these watersports enthralled the King.
 अपि दयिततमेन वारिताभि-  
 र्गृहसरसो विजहे न वारि ताभिः ।  
 परिलुलितललामचर्चिकाभि-  
-र्विहृतिरसान्महिलामचर्चिकाभिः ॥ १२ ॥
+र्विहृतिरसान्महिलामचर्चिकाभिः ॥ 
 </details>
 
 
@@ -274,7 +274,7 @@ those beautiful wives of his in no way jaded.
 अथ विहरणखेदमन्थराभिः  
 सह निरगात्सरसो नृपः प्रियाभिः ।  
 कलशजलनिधेरिवाप्सरोभि-  
-र्विबुधतरुर्मथनश्रमालसाभिः ॥ १३ ॥
+र्विबुधतरुर्मथनश्रमालसाभिः ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -294,7 +294,7 @@ after such frenetic churning fatigued.
 चिकुरनियमनेषु कामिनीना-  
 मभिनववस्त्रपरिग्रहान्तरेषु ।  
 अभिमतपददर्शनैरयत्नै-  
-रतिमदनं स्वममंस्त कम्पराजः ॥ १४ ॥
+रतिमदनं स्वममंस्त कम्पराजः ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -315,7 +315,7 @@ without lifting a finger.
 ततः सैरन्ध्रीभिः कृतसमुचिताकल्परचनः  
 पुरन्ध्रीभिः सार्धं समधिगतशुद्धान्तवसतिः ।  
 त्रयीगीतं तेजस्त्रिपुरहरमाराध्य विधिव-  
-द्यथार्हैर्व्यापारैर्नरपतिरहःशेषमनयत् ॥ १५ ॥ शिखरिणी
+द्यथार्हैर्व्यापारैर्नरपतिरहःशेषमनयत् ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
