--- a/laxyam/padyam/vIra-kathAH/madhurA-vijayam/raw/canto_7.xhtml
+++ b/laxyam/padyam/vIra-kathAH/madhurA-vijayam/raw/canto_7.xhtml
@@ -14,7 +14,7 @@ xmlns:epub="http://www.idpf.org/2007/ops">
 अथ कम्पनरेन्द्रसुभ्रुवां  
 मुखपद्मान्यनुहार्य पङ्कजैः ।  
 अपराधभियेव भानुमा-  
-नपरक्ष्माधरकन्दरामगात् ॥ १ ॥ वियोगिनी
+नपरक्ष्माधरकन्दरामगात् ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -36,7 +36,7 @@ buried deep in the setting mountain.
 परिचूषितदीप्तिरम्बुजैः  
 पुनरूष्माणमिवाप्तुमौर्वतः ।  
 रयवल्गितवाहनो रविः  
-पयसां राशिमवाप पश्चिमम् ॥ २ ॥
+पयसां राशिमवाप पश्चिमम् ॥ 
 </details>
 
 
@@ -56,7 +56,7 @@ seemingly to replenish his heat from the fire in the deep.[^1]
 तरणेररुणीकृताः करै-  
 र्वरुणस्त्रैणकपोलभित्तयः ।  
 मदलोहिनिकामुपावहन्  
-मदिरास्वादनमन्तराप्यहो ॥ ३ ॥
+मदिरास्वादनमन्तराप्यहो ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -76,7 +76,7 @@ touched a drop.[^2]
 प्रथमां हरितं प्रभाकरो  
 विरहय्यात्मनि तापमाप यम् ।  
 अपरामुपगम्य तं जहौ  
-हृदयं कः खलु वेत्ति रागिणाम् ॥ ४ ॥
+हृदयं कः खलु वेत्ति रागिणाम् ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -95,7 +95,7 @@ Who can fathom the hearts of those red-hot with passion?
 प्रतिबिम्बपरम्पराम्बुधौ  
 पवनोद्धूततरङ्गसङ्गिनी ।  
 नभसोऽवतरिष्यतो रवे-  
-र्मणिसोपानधियं व्यभावयत् ॥ ५ ॥
+र्मणिसोपानधियं व्यभावयत् ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -115,7 +115,7 @@ readied for him to descend from the heavens.
 उदधौ पतितस्य भास्वतः  
 कतिभिश्चित् किरणैः खवर्तिभिः ।  
 उदपाद्यत कालकुञ्जरो-  
-द्दलिताहर्द्रुमशाखिकाभ्रमः ॥ ६ ॥
+द्दलिताहर्द्रुमशाखिकाभ्रमः ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -135,7 +135,7 @@ by the tusker of Time.
 गतदीप्ति गभस्तिमालिनो  
 विलुठद्वीचिषु बिम्बमम्बुधेः ।  
 शफराः पलखण्डशङ्क‍या  
-रसनाभिर्लिलिहुर्मुहुर्मुहुः ॥ ७ ॥
+रसनाभिर्लिलिहुर्मुहुर्मुहुः ॥ 
 </details>
 
 
@@ -155,7 +155,7 @@ licking at it with flicking tongues.
 घटमानदलाररीपुटं  
 नलिनं मन्दिरमिन्दिरास्पदम् ।  
 परिपालयति स्म निक्वणन्  
-परितो यामिकवन्मधुव्रतः ॥ ८ ॥
+परितो यामिकवन्मधुव्रतः ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -176,7 +176,7 @@ as each petal-door was pulled to.
 अधिपङ्कजकोशमादधे  
 बहिरालीनमधुव्रतच्छलात् ।  
 मधुसौरभरक्षणोत्सुका  
-दिनलक्ष्मीरिव लक्ष्म जातुषम् ॥ ९ ॥
+दिनलक्ष्मीरिव लक्ष्म जातुषम् ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -196,7 +196,7 @@ a lac-dark seal in the bee clinging to its edge.
 दिनवेषमपास्य यामिनी-  
 वपुषा कालनटस्य नृत्यतः ।  
 ददृशे जगता पितृप्रसू-  
-र्दिवि नेपथ्यपटीव पाटला ॥ १० ॥
+र्दिवि नेपथ्यपटीव पाटला ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -217,7 +217,7 @@ to assume the role of night.
 वियति व्यरुचन् पयोधराः  
 स्फुटसन्ध्यापरिपाटलत्विषः ।  
 अचिरावतरद्विभावरी-  
-पदलाक्षापटलानुकारिणः ॥ ११ ॥
+पदलाक्षापटलानुकारिणः ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -237,7 +237,7 @@ as the dark dame, night, descended.
 उदियाय ततो दिगङ्गना-  
 श्रवणाकल्पतमालपल्लवः ।  
 रजनीमुखपत्रलेखिका-  
-रचनारङ्कुमदस्तमोऽङ्कुरः ॥ १२ ॥
+रचनारङ्कुमदस्तमोऽङ्कुरः ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -258,7 +258,7 @@ upon the face of the evening sky[^4].
 नयनानि जनस्य तत्क्षणा-  
 न्निरुणद्धि स्म निरन्तरं तमः ।  
 रविदीपभृताभ्रकर्पर-  
-च्युतकालाञ्जनपुञ्जमेचकम् ॥ १३ ॥
+च्युतकालाञ्जनपुञ्जमेचकम् ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -279,7 +279,7 @@ as the lamp of the sun below it burnt.[^5]
 तदमंसत मांसलं तम-  
 स्तनुतारागणबिन्दुजालकम् ।  
 दिवसात्ययचण्डताण्डव-  
-च्युतमीशस्य गजाजिनं जनाः ॥ १४ ॥
+च्युतमीशस्य गजाजिनं जनाः ॥ 
 </details>
 
 
@@ -301,7 +301,7 @@ at day’s end.
 अवपत् किमु कालकर्षक-  
 स्तिमिराम्भःकलुषे नभस्तले ।  
 विमलामुडुबीजमण्डलीं  
-नवचन्द्रातपसस्यसिद्ध‍ये ॥ १५ ॥
+नवचन्द्रातपसस्यसिद्ध‍ये ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -321,7 +321,7 @@ to cultivate a crop of fresh moonlight?
 अहरत्ययरागपल्लव-  
 स्तमसा कन्दलितो नभस्तरुः ।  
 सृजति स्म निरन्तरं हरि-  
-द्विटपैस्तारककोरकावलिम् ॥ १६ ॥
+द्विटपैस्तारककोरकावलिम् ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -342,7 +342,7 @@ began to burst into an unceasing series of flower-stars.
 अगमन्नभिसारिकाः प्रिया-  
 ननुरागाञ्जनरञ्जितेक्षणाः ।  
 अभिनत्तिमिरेऽपि ताः पुनः  
-श्वसितेनैव सुगन्धिना जनः ॥ १७ ॥
+श्वसितेनैव सुगन्धिना जनः ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -362,7 +362,7 @@ to wayfarers, by their breath so sweetly scented.
 जननीमुपलभ्य यामिनी-  
 मधिकस्नेहदशाभिवर्धिताः ।  
 दिवसस्य लयं प्रपेदुषो  
-गृहदीपा मुहुरर्भका इव ॥ १८ ॥
+गृहदीपा मुहुरर्भका इव ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -382,7 +382,7 @@ and grew strong with the oil of love she lavished upon them.
 तदनु क्षणदागमोल्लस-  
 त्कलशाम्भोनिधिवीचिरोचिषः ।  
 व्यरुचन् कतिचित् कराङ्कुराः  
-शशिनः शातमखे दिशामुखे ॥ १९ ॥
+शशिनः शातमखे दिशामुखे ॥ 
 </details>
 
 
@@ -404,7 +404,7 @@ surging in jubilance at the onset of the night[^6].
 तरलालसतारकं मुखं  
 कलयन्ती शरकाण्डपाण्डरम् ।  
 विगलत्तिमिराम्बरा बभौ  
-हरिदैन्द्री हरिणाङ्कगर्भिणी ॥ २० ॥
+हरिदैन्द्री हरिणाङ्कगर्भिणी ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -425,7 +425,7 @@ and her dress of darkness slipping off.
 अथ किञ्चिददृश्यतैन्दवं  
 वपुराद्रोदयरागलोहितम् ।  
 बलशासनदिग्विलासिनी-  
-मुखसिन्दूरललामकोमलम् ॥ २१ ॥
+मुखसिन्दूरललामकोमलम् ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -446,7 +446,7 @@ Indra’s beloved.
 परिपिण्डितयावकारुणं  
 प्रचकाशे हिमरश्मिमण्डलम् ।  
 रचितं नवरक्तसन्ध्यकै-  
-र्विजयच्छत्रमिवात्मजन्मनः ॥ २२ ॥
+र्विजयच्छत्रमिवात्मजन्मनः ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -466,7 +466,7 @@ for the triumphant Kāma.
 अथ कम्पनृपोऽपि कृत्यवित्  
 कृतसन्ध्यासमयोचितक्रियः ।  
 अवदत् सविधे स्थितां प्रियां   
-भुवि गङ्गेत्यभिनन्दिताह्वयाम् ॥ २३ ॥
+भुवि गङ्गेत्यभिनन्दिताह्वयाम् ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -486,7 +486,7 @@ she who was known to the world as Gaṅgā[^7].
 कमलाक्षि कटाक्ष्यतामयं  
 समयो वर्णनया रसार्द्रया ।  
 जन एष वचस्तवामृतं  
-श्रवसा पाययितुं कुतूहली ॥ २४ ॥
+श्रवसा पाययितुं कुतूहली ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -507,7 +507,7 @@ with his ears.’
 इति सा दयितेन भाषिता  
 दरनम्रं दधती मुखाम्बुजम् ।  
 वदति स्म शनैः शुचिस्मिता  
-सरसोदारपदां सरस्वतीम् ॥ २५ ॥
+सरसोदारपदां सरस्वतीम् ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -527,7 +527,7 @@ started to speak words to inspire wonder and wisdom.
 स्वदमानसुगन्धिमारुतः  
 प्रसरत्कोमलचन्द्रिकोदयः ।  
 नृपचन्द्र निरीक्ष्यतामयं  
-समयः पोषितपुष्पसायकः ॥ २६ ॥
+समयः पोषितपुष्पसायकः ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -547,7 +547,7 @@ and Love of the flower-shafts flourishes.
 परिरभ्य दृढं चिरागतः  
 प्रथमाशासुदृशां निशापतिः ।  
 श्लथयत्ययमंशुभिर्नखै-  
-स्तिमिरश्रेणिमयीं प्रवेणिकाम् ॥ २७ ॥
+स्तिमिरश्रेणिमयीं प्रवेणिकाम् ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -569,7 +569,7 @@ combing it through with the fingernails of his rays.
 प्रथमाचलमौलिमुच्चकै-  
 रधिरुह्याम्बरपात्रसम्भृतम् ।  
 अयमंशुमृणालिकामुखै-  
-स्तिमिरं चूषयतीव चन्द्रमाः ॥ २८ ॥
+स्तिमिरं चूषयतीव चन्द्रमाः ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -588,7 +588,7 @@ with his rays as lotus-stalk straws.
 अलिनीलमयस्तमोमयं  
 प्रविलाप्योदयरागवह्निना ।  
 कलयत्ययमोषधीश्वरः।  
-कलधौतं शुचि कौमुदीमिषात् ॥ २९ ॥
+कलधौतं शुचि कौमुदीमिषात् ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -608,7 +608,7 @@ formed in moonlight’s image.
 मुहुरामृशदेव पद्मिनी-  
 मपि रागी क्षणदाकरः करैः ।  
 यदमुं प्रति नेयमुन्मुखी  
-प्रभवत्यत्र पतिव्रतागुणः ॥ ३० ॥
+प्रभवत्यत्र पतिव्रतागुणः ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -629,7 +629,7 @@ what firm-founded fidelity![^8]
 अलिविभ्रममन्तरेति य-  
 न्न विधोस्तन्मृगलक्ष्म किन्त्वयम् ।  
 पुरजिद्रथचक्रतार्जितो  
-बहलः कज्जललेपकालिमा ॥ ३१ ॥
+बहलः कज्जललेपकालिमा ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -651,7 +651,7 @@ for Śiva, conqueror of Tripura.
 मघवन्मणिभङ्गमेचकः  
 शशिनि श्यामलिमा चकास्ति यः ।  
 जनयत्ययमङ्कपालिका-  
-प्रणयालीननिशीथिनीधियम् ॥ ३२ ॥
+प्रणयालीननिशीथिनीधियम् ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
