--- a/laxyam/padyam/vIra-kathAH/madhurA-vijayam/raw/canto_8.xhtml
+++ b/laxyam/padyam/vIra-kathAH/madhurA-vijayam/raw/canto_8.xhtml
@@ -14,7 +14,7 @@ xmlns:epub="http://www.idpf.org/2007/ops">
 अधिरङ्गमवाप्तयोगनिद्रं  
 हरिमुद्वेजयतीति जातभीतिः ।  
 पतितं मुहुरिष्टकानिकायं  
-फणचक्रेण निवारयत्यहीन्द्रः ॥ १ ॥ औपच्छन्दसिकम्
+फणचक्रेण निवारयत्यहीन्द्रः ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -35,7 +35,7 @@ with his thousandfold hoods.
 घुणजग्धकवाटसम्पुटानि  
 स्फुटदूर्वाङ्कुरसन्धिमण्डपानि ।  
 श्लथगर्भगृहाणि वीक्ष्य दूये  
-भृशमन्यान्यपि देवताकुलानि ॥ २ ॥
+भृशमन्यान्यपि देवताकुलानि ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -55,7 +55,7 @@ drive me to tears when I see them.
 सतताध्वरधूमसौरभैः प्राङ्  
 निगमोद्घोषणवद्भिरग्रहारैः ।  
 अधुनाजनि विस्रमांसगन्धै-  
-रधिकक्षीबतुलुष्कसिंहनादैः ॥ ३ ॥
+रधिकक्षीबतुलुष्कसिंहनादैः ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -76,7 +76,7 @@ with the drunken roars of inebriate Turks.
 मधुरोपवनं निरीक्ष्य दूये  
 बहुशः खण्डितनालिकेरषण्डम् ।  
 परितो नृकरोटिकोटिहार-  
-प्रचलच्छूलपरम्परापरीतम् ॥ ४ ॥
+प्रचलच्छूलपरम्परापरीतम् ॥ 
 </details>
 
 
@@ -99,7 +99,7 @@ To see it is to weep.
 परितस्तततन्तुवायतन्तु-  
 व्यतिषङ्गाज्जनितानि जालकानि ।  
 पुरगोपुरसालभञ्जिकानां  
-दधते चीनपटावगुण्ठनत्वम् ॥ ५ ॥
+दधते चीनपटावगुण्ठनत्वम् ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -118,7 +118,7 @@ in delicate Chinese cloth.
 न तथा कटुघूत्कृताद्व्यथा मे  
 हृदि जीर्णोपवनेषु घूकलोकात् ।  
 परिशीलितपारसीकवाग्भ्यो  
-यवनानां भवने यथा शुकेभ्यः ॥ ६ ॥
+यवनानां भवने यथा शुकेभ्यः ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -139,7 +139,7 @@ that torments me.
 स्तनचन्दनपाण्डु ताम्रपर्ण्या-  
 स्तरुणीनामभवत् पुरा यदम्भः ।  
 तदसृग्भिरुपैति शोणिमानं  
-निहतानामभितो गवां नृशंसैः ॥ ७ ॥
+निहतानामभितो गवां नृशंसैः ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -160,7 +160,7 @@ cruelly slaughtered upon her banks.
 सुवते न यथापुरं वसूनि  
 क्षितयो वर्षति पूर्ववन्न शक्रः ।  
 शमनोऽपि जनं नयत्यकाण्डे  
-विषयेऽस्मिन् यवनैर्हतावशिष्टम् ॥ ८ ॥
+विषयेऽस्मिन् यवनैर्हतावशिष्टम् ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -180,7 +180,7 @@ those not yet massacred by the foreigners.
 श्रुतिरस्तमिता नयः प्रलीनो  
 विरता धर्मकथा च्युतं चरित्रम् ।  
 सुकृतं गतमाभिजात्यमस्तं  
-किमिवान्यत् कलिरेक एव धन्यः ॥ ९ ॥
+किमिवान्यत् कलिरेक एव धन्यः ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -203,7 +203,7 @@ Kali alone flourishes.’
 इति सा निखिलं निवेद्य राज्ञे  
 यवनानां जनगर्हितं चरित्रम् ।  
 अतिभीषणमात्मनः प्रभावात्  
-कमपि प्रादुरभावयत् कृपाणम् ।। १० ॥
+कमपि प्रादुरभावयत् कृपाणम् ।। 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -224,7 +224,7 @@ a terrifying sword.
 तमरातिनराधिनाथनारी-  
 नयनाम्भःकणपातहेतुभूतम् ।   
 प्रभुरुन्मिषितस्वरोषवह्ने-  
-रधिकोद्दामममंस्त धूमदण्डम् ॥ ११ ॥
+रधिकोद्दामममंस्त धूमदण्डम् ॥ 
 </details>
 
 
@@ -246,7 +246,7 @@ who raised against him swords.
 प्रणयागतचोलपाण्ड्यलक्ष्मी-  
 श्रवणेन्दीवरमालिकायमानम् ।  
 विरचय्य पुरः कृपाणमेषा  
-पुनरप्याह पुरन्दराभमेनम् ॥ १२ ॥
+पुनरप्याह पुरन्दराभमेनम् ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -268,7 +268,7 @@ she spoke once again.
 नरनाथ पुरा कृपाणमेनं  
 विरचय्याखिलदेवतायुधांशैः ।  
 उपदीकृतवान् पिनाकपाणे-  
-र्दनुजानां विजयाय विश्वकर्मा ॥ १३ ॥
+र्दनुजानां विजयाय विश्वकर्मा ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -289,7 +289,7 @@ to defeat the *dānavas*.
 अमुमुग्रतपःकृतप्रसादः  
 प्रददौ पाण्ड्यनृपाय सोऽपि देवः ।  
 यमुपेत्य चिरेण तस्य वंश्याः  
-पृथिवीमप्रतिशासनामशासन् ॥ १४ ॥
+पृथिवीमप्रतिशासनामशासन् ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -310,7 +310,7 @@ for many a year.
 अथ कालवशेन पाण्ड्यवंश्यान्  
 गतवीर्यानवधार्य कुम्भजन्मा ।  
 मनुजेश्वर मण्डलाग्रमेनं  
-भवते प्रेषितवान् महाभुजाय ।। १५ ॥
+भवते प्रेषितवान् महाभुजाय ।। 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -329,7 +329,7 @@ Your Most Mighty Majesty.
 अमुनाशु विशस्य दक्षिणस्यां  
 मधुरायां पुरि कंसवन्नृशंसम् ।  
 यवनाधिपतिं बलोत्तरस्त्वं  
-विदधीथाः स्फुटमच्युतावतारम् ॥ १६ ॥
+विदधीथाः स्फुटमच्युतावतारम् ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
