--- a/laxyam/padyam/vIra-kathAH/madhurA-vijayam/raw/canto_9.xhtml
+++ b/laxyam/padyam/vIra-kathAH/madhurA-vijayam/raw/canto_9.xhtml
@@ -14,7 +14,7 @@ xmlns:epub="http://www.idpf.org/2007/ops">
 मुक्ताफलैर्वीरकृपाणलेखा-  
 विभिन्नगन्धद्विपकुम्भमुक्तैः ।  
 रक्तारुणैस्तत्क्षणघट्टनोत्थ-  
-स्फुलिङ्गसङ्घातमतिर्वितेने ।। १ ॥ उपजातिः
+स्फुलिङ्गसङ्घातमतिर्वितेने ।। 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -34,7 +34,7 @@ as iron struck bone.
 निशाचराः केचन कुञ्जराणां  
 कुम्भस्थलान्निःसृतमास्रपूरम् ।  
 निष्ठ्यूतमुक्तामणयः सहर्षं  
-चुचूषुरुत्पुष्करनालदण्डैः ॥ २ ॥
+चुचूषुरुत्पुष्करनालदण्डैः ॥ 
 </details>
 
 
@@ -55,7 +55,7 @@ spitting out the pearls.
 जिघत्सयान्तः पतगैः प्रविष्टैः  
 प्रस्पन्दमानं कुणपं द्विपस्य ।  
 समीपमासाद्य सजीवबुद्ध्या  
-व्यसुं सतृष्णोऽपि जहौ सृगालः ॥ ३ ॥
+व्यसुं सतृष्णोऽपि जहौ सृगालः ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -76,7 +76,7 @@ as if with new life.
 द्विषा सरोषेण पृषत्कवर्षै-  
 र्निषूदितः कोऽप्यमरत्वमेत्य ।  
 चकार तस्योपरि पुष्पवर्षं  
-सहर्षमुद्घोषितचाटुवादः ॥ ४ ॥
+सहर्षमुद्घोषितचाटुवादः ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -97,7 +97,7 @@ singing his praises ecstatically.
 कुम्भेषु भिन्दन् नृपतिर्द्विपेन्द्रान्   
 मुक्ताफलैः शर्करिलान्तराभिः ।  
 प्रावर्तयद्रक्ततरङ्गिणीभिः  
-परःशताः संयति ताम्रपर्णीः ॥ ५ ॥
+परःशताः संयति ताम्रपर्णीः ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -118,7 +118,7 @@ pebbled with pearls.
 तेन द्विपास्तोमरिणा विभिन्नाः  
 कुम्भस्थलैरुज्झितमौक्तिकौघैः ।  
 क्रौञ्चस्य जह्रुर्गुहशक्तिघात-  
-प्रकीर्णहंसप्रकरस्य शोभाम् ॥ ६ ॥
+प्रकीर्णहंसप्रकरस्य शोभाम् ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -138,7 +138,7 @@ setting forth a stream of *haṃsas*.[^1]
 शूरस्तथा प्राहृत मुद्गरेण  
 शिरस्त्रवन्ति द्विषतां शिरांसि ।  
 यथा विनिर्यन्नयनानि तानि  
-मङ्क्षु न्यमाङ्क्षुः स्वशरीर एव ॥ ७ ॥
+मङ्क्षु न्यमाङ्क्षुः स्वशरीर एव ॥ 
 </details>
 
 
@@ -159,7 +159,7 @@ sunk with a plunk into their necks.
 ततस्तुलुष्कान् युधि कान्दिशीका-  
 नालोक्य विष्फारितघोरशार्ङ्गः ।  
 कम्पक्षितीन्द्रं यवनाधिराजः  
-प्रत्यग्रहीद्वृत्र इवामरेन्द्रम् ॥ ८ ॥
+प्रत्यग्रहीद्वृत्र इवामरेन्द्रम् ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -180,7 +180,7 @@ as Vṛtra did Indra, king of the gods.
 आस्फाल्यमानस्य च तेन गाढं  
 शार्ङ्गस्य मौर्वीनिनदश्चकार ।  
 चिरात् परित्यज्य तमुच्चलन्त्या  
-जयश्रियो नूपुरघोषशङ्काम् ॥ ९ ॥
+जयश्रियो नूपुरघोषशङ्काम् ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -202,7 +202,7 @@ abandoning him.
 बाणा निरस्ता यवनेन तस्मि-  
 न्नपाङ्गपाता इव वीरलक्ष्म्याः ।  
 कम्पेश्वरेणाप्यभिपारसीकं  
-शराः कटाक्षा इव कालरात्रेः ॥ १० ॥
+शराः कटाक्षा इव कालरात्रेः ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -221,7 +221,7 @@ like the menacing leer of dusky Death.
 स केरलप्राणमरुद्भुजङ्गान्  
 वन्यावनीन्द्रद्रुमदाववह्नीन् ।  
 अन्ध्रान्धकारक्षयतिग्मभासो  
-बाणानमुञ्चद्यवने नरेन्द्रः ।। ११ ॥
+बाणानमुञ्चद्यवने नरेन्द्रः ।। 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -243,7 +243,7 @@ such arrows did the King let loose upon the Sultan.
 क्षतानि यान्यस्य शरैः शरीरे  
 चकार वीरस्य तुलुष्कवीरः ।  
 वितेनिरे तानि नखाङ्कशङ्कां  
-जयश्रियो भोगसमुत्सुकायाः ॥ १२ ॥
+जयश्रियो भोगसमुत्सुकायाः ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -265,7 +265,7 @@ had pricked him with her sharp-tipped nails.
 उदग्रमग्रे यवनाधिभर्तुः  
 साक्षात् कलेर्मौलिमिवाशुगेन ।  
 स मङ्क्षु सार्धं जयकाङ्क्षितेन  
-ध्वाङ्क्षध्वजं ध्वंसयति स्म धन्वी ॥ १३ ॥
+ध्वाङ्क्षध्वजं ध्वंसयति स्म धन्वी ॥ 
 </details>
 
 
@@ -287,7 +287,7 @@ and with it all his hopes of victory.
 अमर्षितस्याथ पृषत्कवर्षं  
 विमुञ्चतो विद्विषतः शरेण ।  
 स कार्मुकज्यामलुनात् तुलुष्क-  
-राज्यश्रियो मङ्गलसूत्रकल्पाम् ॥ १४ ॥
+राज्यश्रियो मङ्गलसूत्रकल्पाम् ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -308,7 +308,7 @@ worn by the goddess of his reign.[^2]
 विहाय शार्ङ्गं धनुरिद्धरोष-  
 स्तुलुष्कवीरस्तरवारिमुग्रम् ।  
 तुरङ्गपर्याणनिबद्धवर्ध्रा-  
-विलम्बिनं सत्वरमुज्जहार ॥ १५ ॥
+विलम्बिनं सत्वरमुज्जहार ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -328,7 +328,7 @@ hanging by a strap from his saddle.
 अथाग्रहीत् कम्पनृपस्तमेव  
 कौक्षेयकं कालकरालरूपम् ।  
 व्यापादनार्थं यवनेश्वरस्य  
-यः प्रेषितः प्राक् कलशोद्भवेन ॥ १६ ॥
+यः प्रेषितः प्राक् कलशोद्भवेन ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -347,7 +347,7 @@ a blade dreadful as the dark lord of death.
 स वञ्चयंस्तत्तरवारिधारां  
 धाराविशेषप्रवणोपवाह्यः ।  
 अशातयत् तस्य शिरो निमेषा-  
-दनेन कर्णाटकुलप्रदीपः ॥ १७ ॥
+दनेन कर्णाटकुलप्रदीपः ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -366,7 +366,7 @@ dodging his foe’s whetted blade.
 अज्ञातसेवोचितचाटुवादं  
 तुलुष्कसाम्राज्यकृताभिषेकम् ।  
 दिवौकसामप्यकृतप्रणामं  
-भूमौ सुरत्राणशिरः पपात ॥ १८ ॥
+भूमौ सुरत्राणशिरः पपात ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -387,7 +387,7 @@ it fell.
 च्युतेऽपि शीर्षे चलिताश्ववल्गा-  
 नियन्त्रणव्यापृतवामपाणिम् ।  
 प्रतिप्रहारप्रसृतान्यहस्तं  
-वीरः कबन्धं द्विषतोऽभ्यनन्दीत् ॥ १९ ॥
+वीरः कबन्धं द्विषतोऽभ्यनन्दीत् ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -406,7 +406,7 @@ while the right stretched forth to settle the score.
 प्रशान्तदावेव वनान्तलक्ष्मी-  
 र्गतोपरागा गगनस्थलीव ।  
 कलिन्दजा मर्दितकालियेव  
-दिग्दक्षिणासीत् क्षतपारसीका ॥ २० ॥
+दिग्दक्षिणासीत् क्षतपारसीका ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
