--- a/laxyam/padyam/vIra-kathAH/madhurA-vijayam/raw/canto_2.xhtml
+++ b/laxyam/padyam/vIra-kathAH/madhurA-vijayam/raw/canto_2.xhtml
@@ -14,7 +14,7 @@ xmlns:epub="http://www.idpf.org/2007/ops">
 अथास्य वंशप्रतिरोहबीजं  
 महीभुजो गर्भमधत्त देवी ।  
 जगत्त्रयोद्भूतिनिदानभूतं  
-तेजो विधातुः प्रथमेव सृष्टिः ॥ १ ॥ उपजातिः
+तेजो विधातुः प्रथमेव सृष्टिः ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -33,7 +33,7 @@ the energy which brings into being the three worlds.
 मुखेन तन्वी शरपाण्डरेण  
 विमुक्तरत्नाभरणा विरेजे ।  
 विलूनराजीववना दिनान्ते  
-छायाशशाङ्केन शरन्नदीव ॥ २ ॥
+छायाशशाङ्केन शरन्नदीव ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -55,7 +55,7 @@ as night draws near.
 अनन्यसामान्यभुजापदान-  
 मुत्पत्स्यमानं तनयं नृपस्य ।  
 अनारतं वीररसानुबन्धं  
-न्यवेदयद्दौहृदमेव देव्याः ॥ ३ ॥
+न्यवेदयद्दौहृदमेव देव्याः ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -74,7 +74,7 @@ would author deeds assayed by no other.
 अपारयन्ती चरितैणशाबं  
 क्रीडाचलोपान्तमपि प्रयातुम् ।  
 आखेटरागादधिरोढुमैच्छ-  
-न्माद्यन्मृगेन्द्रान् मलयाद्रिकूटान् ॥ ४ ॥
+न्माद्यन्मृगेन्द्रान् मलयाद्रिकूटान् ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -96,7 +96,7 @@ to hunt maddened lions.
 पृथ्वी रथः सारथिरब्जसूतिः  
 शेषेण सज्यं धनुरद्रिराजः ।  
 शरश्च शौरिः किल हन्त लक्ष्यं  
-त्रयं पुरामित्यहसत् पुरारिम् ॥ ५ ॥
+त्रयं पुरामित्यहसत् पुरारिम् ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -121,7 +121,7 @@ conqueror of the three cities.[^2]
 सौभाग्यगन्धद्विपदानलेखा  
 रराज तस्या नवरोमराजिः ।  
 तेजोनिधिं गर्भतले निषण्णं  
-कालोरगी रक्षितुमागतेव ॥ ६ ॥
+कालोरगी रक्षितुमागतेव ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -142,7 +142,7 @@ buried deep within her womb.[^3]
 अथ प्रशस्ते दिवसे समस्तै-  
 र्मौहूर्तिकैः साधितपुण्यलग्ने ।  
 असूत सूनुं नरनाथपत्नी  
-देवी महासेनमिवेन्दुमौलेः ॥ ७ ॥
+देवी महासेनमिवेन्दुमौलेः ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -165,7 +165,7 @@ bore Kumāra, leader of heaven’s army.
 महौजसस्तस्य निजैर्यशोभि-  
 रुद्वेलदुग्धोदधिपूरगौरैः ।  
 प्रक्षालितानीव तदा बभूवु-  
-र्धृतप्रसादानि दिशां मुखानि ॥ ८ ॥
+र्धृतप्रसादानि दिशां मुखानि ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -184,7 +184,7 @@ white as the flood of the milky sea spilling its shores.
 आगामिनीमध्वरहव्यसिद्धिं  
 निश्चित्य देशेष्वपि दक्षिणेषु ।  
 प्रदक्षिणीभूतशिखाकलापो  
-ननर्त हर्षादिव हव्यवाहः ॥ ९ ॥
+ननर्त हर्षादिव हव्यवाहः ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -204,7 +204,7 @@ or so it seemed.
 सुखायमानां सुतजन्मवार्तां  
 सहर्षमावेदयते जनाय ।  
 अवाञ्छदात्मानमपि प्रदातुं  
-कुतूहली कुन्तलभूमिपालः ॥ १० ॥
+कुतूहली कुन्तलभूमिपालः ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -225,7 +225,7 @@ of his son’s birth.
 विशृङ्खलास्तस्य गिरा निरीयुः  
 कारागृहेभ्यो विमतावरोधाः ।  
 तुलुष्कबन्दीनिवहाय तूर्ण-  
-मागामिने दातुमिवावाकाशम् ॥ ११ ॥
+मागामिने दातुमिवावाकाशम् ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -246,7 +246,7 @@ soon to arrive.
 स्नातस्ततो धौतदुकूलधारी  
 वितीर्य भूरि द्रविणं द्विजेभ्यः ।  
 महीपतिः पुत्रमुखं दिदृक्षुः  
-प्राविक्षदन्तःपुरमात्तहर्षः ॥ १२ ॥
+प्राविक्षदन्तःपुरमात्तहर्षः ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -267,7 +267,7 @@ aquiver with joy.
 अवैक्षत क्षामशरीरयष्टेः  
 कुमारमुत्सङ्गगतं स देव्याः ।  
 शरत्कृशाया इव शैवलिन्या-  
-स्तरङ्गलग्नं कलहंसशाबम् ॥ १३ ॥
+स्तरङ्गलग्नं कलहंसशाबम् ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -288,7 +288,7 @@ slimmed by Śarad.
 मुहुर्मुहुः पल्लवपाटलेन  
 मुष्टीकृतेन द्वितयेन पाण्योः ।  
 अरातिलक्ष्मीकचसञ्चयाना-  
-माकर्षशिक्षामिव शीलयन्तम् ॥ १४ ॥
+माकर्षशिक्षामिव शीलयन्तम् ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -309,7 +309,7 @@ dragging them by their tightly tied braids.
 अव्याजसौन्दर्यगुणाभिरामं  
 कुमारमालोकयतश्चिराय ।  
 नृपस्य निष्पन्ददृशो मुहूर्त-  
-मानन्दबाष्पोऽभवदन्तरायः ॥ १५ ॥
+मानन्दबाष्पोऽभवदन्तरायः ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -328,7 +328,7 @@ enthralled by his unadorned beauty.
 आश्लिष्यतस्तस्य दृशा तनूज-  
 मन्तः प्रहर्षेण विजृम्भितेन ।  
 प्रायः प्रणुन्नैर्बहिरङ्गकेभ्यः  
-प्रादुर्बभूवे पुलकप्ररोहैः ॥ १६ ॥
+प्रादुर्बभूवे पुलकप्ररोहैः ॥ 
 </details>
 
 
@@ -349,7 +349,7 @@ so that he prickled with goosebumps.
 आकम्पयिष्यत्ययमेकवीरः  
 संग्रामरङ्गे सकलानरातीन् ।  
 इत्येव निश्चित्य स दीर्घदर्शी  
-नाम्ना सुतं कम्पन इत्यकार्षीत् ॥ १७ ॥
+नाम्ना सुतं कम्पन इत्यकार्षीत् ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -371,7 +371,7 @@ The Terrifying.
 क्रमेण धात्रीजनशिक्षितानि  
 वचांसि यातानि च मन्थराणि ।  
 स्खलत्पदान्यस्य धराधिनाथो  
-निशम्य दृष्ट्वा च स निर्वृतोऽभूत् ॥ १८ ॥
+निशम्य दृष्ट्वा च स निर्वृतोऽभूत् ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -392,7 +392,7 @@ brought the emperor of the earth true bliss.
 कलक्वणत्काञ्चनकिङ्किणीकं  
 गृहाङ्गणे जानुचरं कुमारम् ।  
 आलोकयन्तावमृताम्बुराशे-  
-र्मग्नाविवान्तः पितरावभूताम् ॥ १९ ॥
+र्मग्नाविवान्तः पितरावभूताम् ॥ 
 </details>
 
 
@@ -413,7 +413,7 @@ they had dived into a deep ocean of *amṛta*.
 पशुपतिरिव नेत्रैः सोमसूर्याग्निरूपै-  
 र्नय इव निरपायैः प्राभवोत्साहमन्त्रैः ।  
 भव इव पुरुषार्थैर्धर्मकामार्थसंज्ञै-  
-स्त्रिभिरपि नरपालस्तैस्तनूजैरभासीत् ॥ २० ॥ मालिनी
+स्त्रिभिरपि नरपालस्तैस्तनूजैरभासीत् ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
