--- a/laxyam/padyam/vIra-kathAH/madhurA-vijayam/raw/canto_4.xhtml
+++ b/laxyam/padyam/vIra-kathAH/madhurA-vijayam/raw/canto_4.xhtml
@@ -12,7 +12,7 @@ xmlns:epub="http://www.idpf.org/2007/ops">
 <details><summary>मूलम्</summary>
 
 अन्येद्युरथ राजीववनजीवनदायिनि ।  
-लोकैकदीपे भगवत्युदिते भानुमालिनि ॥ १ ॥  अनुष्टुभ्
+लोकैकदीपे भगवत्युदिते भानुमालिनि ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -30,7 +30,7 @@ rose,
 <details><summary>मूलम्</summary>
 
 विहाय निद्रां विधिवन्निर्मिताहर्मुखक्रियः ।  
-आदिक्षत् पृतनाध्यक्षान् सेनासन्नहनाय सः ॥ २ ॥
+आदिक्षत् पृतनाध्यक्षान् सेनासन्नहनाय सः ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -46,7 +46,7 @@ ordered the generals to array the army.
 <details><summary>मूलम्</summary>
 
 विजृम्भमाणे प्रस्थानशारदारम्भसम्भ्रमे ।  
-नृपाणां चामरालीभिर्मरालीभिरभूयत ॥ ३ ॥
+नृपाणां चामरालीभिर्मरालीभिरभूयत ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -65,7 +65,7 @@ became a procession of *haṃsas*.
 <details><summary>मूलम्</summary>
 
 पोषितो हयहेषाभिर्बृंहितो गजबृंहितैः ।  
-वर्धितस्तूर्यनिध्वानैः कोऽपि कोलाहलोऽभवत् ॥ ४ ॥
+वर्धितस्तूर्यनिध्वानैः कोऽपि कोलाहलोऽभवत् ॥ 
 </details>
 
 
@@ -83,7 +83,7 @@ a defeaning din broke out.
 <details><summary>मूलम्</summary>
 
 अथ निर्गत्य भवनादवैक्ष्यत महीक्षिता ।  
-धारितस्तोरणाभ्यर्णे तुङ्गस्तुरगपुङ्गवः ॥ ५ ॥
+धारितस्तोरणाभ्यर्णे तुङ्गस्तुरगपुङ्गवः ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -99,7 +99,7 @@ held ready for him near the arched entrance.
 <details><summary>मूलम्</summary>
 
 जवाधरितजम्भारितुरङ्गभ्रमकारिणम् ।  
-मणिकुट्टिमसंक्रान्तमाक्रामन् बिम्बमात्मनः ॥ ६ ॥
+मणिकुट्टिमसंक्रान्तमाक्रामन् बिम्बमात्मनः ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -116,7 +116,7 @@ no match for his speed.
 <details><summary>मूलम्</summary>
 
 मुखलीनखलीनाहिरच्छपल्ययनच्छदः ।  
-वपुषापि गरुत्मन्तमनुगन्तुमिवोत्सुकः ॥ ७ ॥
+वपुषापि गरुत्मन्तमनुगन्तुमिवोत्सुकः ॥ 
 </details>
 
 
@@ -137,7 +137,7 @@ by rivalling him in appearance too.
 <details><summary>मूलम्</summary>
 
 लोलवालाग्रलग्नेन सेव्यमानो नभस्वता ।  
-रंहोरहस्यशिक्षार्थं शिष्यतामिव जग्मुषा ॥ ८ ॥
+रंहोरहस्यशिक्षार्थं शिष्यतामिव जग्मुषा ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -155,7 +155,7 @@ to perfect the secret science of speed.
 <details><summary>मूलम्</summary>
 
 मुहुः स्वजवसंरोधनमितोन्नमिताननः ।  
-नमस्कुर्वन्निव पुरोवर्तिनीं विजयश्रियम् ॥ ९ ॥
+नमस्कुर्वन्निव पुरोवर्तिनीं विजयश्रियम् ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -173,7 +173,7 @@ to the goddess of victory before him.
 <details><summary>मूलम्</summary>
 
 देहबन्धमिवोत्साहं तमारुह्य महीपतिः ।  
-अमंस्त पृथिवीं सर्वामात्मनो हस्तवर्तिनीम् ॥ १० ॥
+अमंस्त पृथिवीं सर्वामात्मनो हस्तवर्तिनीम् ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -191,7 +191,7 @@ in the palm of his hand.
 <details><summary>मूलम्</summary>
 
 अथ कम्पमहीपालः कम्पयन् द्विषतां मनः ।  
-प्रातिष्ठत दिशं भेजे मलयाचलमुद्रिताम् ॥ ११ ॥
+प्रातिष्ठत दिशं भेजे मलयाचलमुद्रिताम् ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -208,7 +208,7 @@ marked by Mount Malaya.
 <details><summary>मूलम्</summary>
 
 रजोभिर्मुहुरुद्धूतैर्लघूभवति भूभरे ।  
-कथञ्चित् पृतनाभारं चक्षमे फणिनां पतिः ॥ १२ ॥
+कथञ्चित् पृतनाभारं चक्षमे फणिनां पतिः ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -226,7 +226,7 @@ from collapsing under the army’s weight.
 <details><summary>मूलम्</summary>
 
 प्रतापादित्यकीर्तीन्दुयुगपद्ग्रासलालसः ।  
-परागः परभूपानामुपरागोऽभवन्नवः ॥ १३ ॥
+परागः परभूपानामुपरागोऽभवन्नवः ॥ 
 </details>
 
 
@@ -245,7 +245,7 @@ the likes of which the world has never seen.
 <details><summary>मूलम्</summary>
 
 पांसुस्थगनलक्षेण पलायत रविः क्वचित् ।  
-भावियुद्धामरीभूतवीरोद्दलनशङ्कितः ॥ १४ ॥
+भावियुद्धामरीभूतवीरोद्दलनशङ्कितः ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -263,7 +263,7 @@ in the battle to come.[^1]
 <details><summary>मूलम्</summary>
 
 वितेनिरे करेणूनां करशीकररेणवः ।  
-घनस्य सेनारजसः करकाकारचातुरीम् ॥ १५ ॥
+घनस्य सेनारजसः करकाकारचातुरीम् ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -279,7 +279,7 @@ as the dust of the army thickened into a cloud.
 <details><summary>मूलम्</summary>
 
 अथ लङ्घितकर्णाटः पञ्चषैरेव वासरैः ।  
-प्रापत् कम्पमहीपालः कण्टकाननपट्टनम् ॥ १६ ॥
+प्रापत् कम्पमहीपालः कण्टकाननपट्टनम् ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -296,7 +296,7 @@ reached the city of Kaṇṭakānana.
 <details><summary>मूलम्</summary>
 
 स तत्र दिवसान् कांश्चिदतिवाह्य महाबलः।  
-अभिषेणयितुं चम्पमुपाक्रमत कालवित् ॥ १७ ॥
+अभिषेणयितुं चम्पमुपाक्रमत कालवित् ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -312,7 +312,7 @@ carefully choosing his moment.
 <details><summary>मूलम्</summary>
 
 प्रसृतैस्तच्चमूधूलिस्तोमैः क्षीरतरङ्गिणी ।  
-कीर्त्या चम्पक्षितीन्द्रस्य साकं कलुषतामगात् ॥ १८ ॥
+कीर्त्या चम्पक्षितीन्द्रस्य साकं कलुषतामगात् ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -329,7 +329,7 @@ along with King Campa’s repute.
 <details><summary>मूलम्</summary>
 
 स दुग्धवाहिनीवीचिमारुताधूतशाखिनि ।  
-विरिञ्चिनगराभ्यर्णे न्यवेशयदनीकिनीम् ॥ १९ ॥
+विरिञ्चिनगराभ्यर्णे न्यवेशयदनीकिनीम् ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -347,7 +347,7 @@ rustled the trees.
 <details><summary>मूलम्</summary>
 
 अथ सन्नद्धसैन्यस्तं न्यरुन्ध द्रमिडाधिपम् ।  
-घनीकृतहिमानीको हेमन्त इव भास्करम् ॥ २० ॥
+घनीकृतहिमानीको हेमन्त इव भास्करम् ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -366,7 +366,7 @@ lays siege to the sun.
 <details><summary>मूलम्</summary>
 
 संवर्तमारुताक्षिप्तसमुद्रद्व‍यसन्निभौ ।  
-व्यूहौ द्रमिडकर्णाटनाथयोः सन्निपेततुः ॥ २१ ॥
+व्यूहौ द्रमिडकर्णाटनाथयोः सन्निपेततुः ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -384,7 +384,7 @@ crashed upon each other.
 <details><summary>मूलम्</summary>
 
 रजस्तमसि वीरास्त्रसङ्घसङ्घट्टनोत्थितैः ।  
-बभ्रे स्फुलिङ्गसङ्घातैः खद्योतनिवहद्युतिः ॥ २२ ॥
+बभ्रे स्फुलिङ्गसङ्घातैः खद्योतनिवहद्युतिः ॥ 
 </details>
 
 
@@ -403,7 +403,7 @@ the dust deepening into dusk.
 <details><summary>मूलम्</summary>
 
 क्षतजार्द्राः प्रवीराणां प्रेङ्खन्त्यः खड्गलेखिकाः ।  
-जिघत्सतः कृतान्तस्य जिह्वा इव विरेजिरे ॥ २३ ॥
+जिघत्सतः कृतान्तस्य जिह्वा इव विरेजिरे ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -420,7 +420,7 @@ as if they were the rampaging tongues of ravenous Death.
 <details><summary>मूलम्</summary>
 
 आस्रापगासु परितो निःसृतासु सहस्रशः ।  
-भटानां भल्लनिर्लूनैरम्भोजायितमाननैः ॥ २४ ॥
+भटानां भल्लनिर्लूनैरम्भोजायितमाननैः ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -438,7 +438,7 @@ heroes’ heads sliced off by *bhalla* arrows.
 <details><summary>मूलम्</summary>
 
 वीराः कुञ्जरकुम्भेषु शायिनः शत्रुसायकैः ।  
-प्राबुध्यन्त सुरस्त्रीणां कुचकुम्भेषु तत्क्षणात् ॥ २५ ॥
+प्राबुध्यन्त सुरस्त्रीणां कुचकुम्भेषु तत्क्षणात् ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -456,7 +456,7 @@ upon pillows formed of *apsarases’* breasts.[^2]
 <details><summary>मूलम्</summary>
 
 ततः कम्पनरेन्द्रस्य भटैर्भुजबलोत्कटैः ।  
-पलायत पराभूता द्रमिडेन्द्रवरूथिनी ॥ २६ ॥
+पलायत पराभूता द्रमिडेन्द्रवरूथिनी ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -473,7 +473,7 @@ the forces of the Dramiḍa lord.
 <details><summary>मूलम्</summary>
 
 हतानुकारिणः केचित् क्षितौ निपतितास्ततः ।  
-क्रोष्टुर्भयेन धावन्तः कर्णाटान् पर्यहासयन् ॥ २७ ॥
+क्रोष्टुर्भयेन धावन्तः कर्णाटान् पर्यहासयन् ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -491,7 +491,7 @@ provoking the mirth of their Karṇāṭa foes.
 <details><summary>मूलम्</summary>
 
 विक्षेप्तुं विस्मृतैश्चर्मफलकैर्निर्मितप्लवाः ।  
-मृषैव केचिदतरन् मृगतृष्णातरङ्गिणीः ॥ २८ ॥
+मृषैव केचिदतरन् मृगतृष्णातरङ्गिणीः ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -508,7 +508,7 @@ in vain.
 <details><summary>मूलम्</summary>
 
 अथ तस्य पुरीमेव नीत्वा शिबिरतां नृपः ।  
-अचलं राजगम्भीरमरुन्ध द्विषदाश्रितम् ॥ २९ ॥
+अचलं राजगम्भीरमरुन्ध द्विषदाश्रितम् ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -525,7 +525,7 @@ where hid his foe.
 <details><summary>मूलम्</summary>
 
 प्रवाताभिमुखाधूतैः पताकापाणिपल्लवैः ।  
-आरोहणाय राजेन्द्रमाजुहावेव भूधरः ॥ ३० ॥
+आरोहणाय राजेन्द्रमाजुहावेव भूधरः ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -542,7 +542,7 @@ formed of flags fluttering in the wind.
 <details><summary>मूलम्</summary>
 
 अथ प्रववृते युद्धं सेनयोरुभयोरपि ।  
-पतदुत्पतदस्त्रांशुज्वलितोर्वीनभःस्थलम् ॥ ३१ ॥
+पतदुत्पतदस्त्रांशुज्वलितोर्वीनभःस्थलम् ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -560,7 +560,7 @@ missile glanced against missile.
 <details><summary>मूलम्</summary>
 
 निर्जगाम निजागाराच्चम्पक्ष्मापोऽपि कोपनः ।  
-कृपाणपाणिर्वल्मीकाज्जिह्वाल इव जिह्मगः ॥ ३२ ॥
+कृपाणपाणिर्वल्मीकाज्जिह्वाल इव जिह्मगः ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -578,7 +578,7 @@ tongue flicking.
 <details><summary>मूलम्</summary>
 
 अहंपूर्विकया वीरेष्वभितो युद्धकाङ्क्षिषु ।  
-प्रत्यग्रहीन्महीपालश्चम्पं सिंह इव द्विपम् ॥ ३३ ॥
+प्रत्यग्रहीन्महीपालश्चम्पं सिंह इव द्विपम् ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -596,7 +596,7 @@ as a lion upon an elephant.
 <details><summary>मूलम्</summary>
 
 अथ वञ्चिततत्खड्गप्रहारः कम्पभूपतिः ।  
-अकरोदसिना चम्पममरेन्द्रपुरातिथिम् ॥ ३४ ॥
+अकरोदसिना चम्पममरेन्द्रपुरातिथिम् ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
@@ -616,7 +616,7 @@ a guest of Indra in heaven.
 इत्थं सङ्गरमूर्ध्नि चम्पनृपतिं नीत्वा कथाशेषतां  
 श्रीमान् कम्पनृपेश्वरो जनयितुः सम्प्राप्तवान् शासनम् ।  
 काञ्चीन्यस्तजयप्रशस्तिरमिथःसङ्कीर्णवर्णाश्रमं  
-नीत्या नित्यनिरत्ययर्द्धिरशिषत् तुण्डीरभूमण्डलम् ॥ ३५ ॥ शार्दूलविक्रीडितम्
+नीत्या नित्यनिरत्ययर्द्धिरशिषत् तुण्डीरभूमण्डलम् ॥ 
 </details>
 
 <details><summary>Shankar & Venetia</summary>
